--- a/microsetta_interface/static/css/minimal_interface.css
+++ b/microsetta_interface/static/css/minimal_interface.css
@@ -1608,3 +1608,97 @@ input.barcode-checkbox[type=checkbox]:checked+label {
         display: none;
     }
 }
+
+.two-column-layout {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 52px;
+}
+
+.diversity-gauge-container {
+    width: 532px;
+    height: 424px;
+    border-radius: 20px;
+    background: var(--White, #FFF);
+    box-shadow: 0px 0px 20px 2px rgba(102, 102, 102, 0.30);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem;
+}
+
+.report-text-column {
+    flex: 1;
+    text-align: left;
+    max-width: 1280px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.report-header {
+    color: var(--tmi-blue);
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 40px;
+}
+
+.report-text-container {
+    width: 696px;
+    height: 500px;
+}
+
+.gauge-arc {
+    fill: #D9E9EF;
+    stroke: #D9E9EF;
+    stroke-width: 2;
+}
+
+.gauge-score-num {
+    fill: #006A96;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 24px
+}
+
+.gauge-score-text {
+    fill: #747678;
+    font-size: 16px;
+    line-height: 1.3;
+    font-family: 'Mulish';
+    font-weight: 400;
+    font-style: normal;
+}
+
+.gauge-score-text-link {
+    fill: #0000EE;
+    font-family: 'Mulish';
+    font-size: 16px;
+    line-height: 1.3;
+    font-weight: 400;
+    line-height: normal;
+}
+
+a .gauge-score-text-link:hover {
+    fill: #0000EE;
+    text-decoration: underline;
+}
+
+.gauge-score-average {
+    fill: #FC8900;
+    font-size: 68px;
+    font-family: Mulish;
+    font-weight: 700;
+    line-height: normal;
+    text-anchor: middle;
+}
+
+.gauge-score-title {
+    fill: #006A96;
+    font-size: 16px;
+    line-height: 26px;
+    font-family: 'Mulish';
+    font-weight: 700;
+    font-style: normal;
+}
