--- a/microsetta_interface/static/css/minimal_interface.css
+++ b/microsetta_interface/static/css/minimal_interface.css
@@ -1616,18 +1616,6 @@ input.barcode-checkbox[type=checkbox]:checked+label {
     gap: 52px;
 }
 
-.diversity-gauge-container {
-    width: 532px;
-    height: 424px;
-    border-radius: 20px;
-    background: var(--White, #FFF);
-    box-shadow: 0px 0px 20px 2px rgba(102, 102, 102, 0.30);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 1rem;
-}
-
 .report-text-column {
     flex: 1;
     text-align: left;
@@ -1701,4 +1689,20 @@ a .gauge-score-text-link:hover {
     font-family: 'Mulish';
     font-weight: 700;
     font-style: normal;
+}
+
+.diversity-gauge-container {
+    margin-top: 1rem;
+    padding-top: 1.5rem;
+    margin-bottom: 1rem;
+    display: flex;
+    justify-content: flex-start;
+}
+
+#diversity-gauge-chart {
+    max-width: 800px;
+    border-radius: 20px;
+    background: var(--White, #FFF);
+    box-shadow: 0px 0px 20px 2px rgba(102, 102, 102, 0.30);
+    flex: 1;
 }
