--- a/microsetta_interface/static/css/minimal_interface.css
+++ b/microsetta_interface/static/css/minimal_interface.css
@@ -1637,60 +1637,8 @@ input.barcode-checkbox[type=checkbox]:checked+label {
     height: 500px;
 }
 
-.gauge-arc {
-    fill: #D9E9EF;
-    stroke: #D9E9EF;
-    stroke-width: 2;
-}
-
-.gauge-score-num {
-    fill: #006A96;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 24px
-}
-
-.gauge-score-text {
-    fill: #747678;
-    font-size: 16px;
-    line-height: 1.3;
-    font-family: 'Mulish';
-    font-weight: 400;
-    font-style: normal;
-}
-
-.gauge-score-text-link {
-    fill: #0000EE;
-    font-family: 'Mulish';
-    font-size: 16px;
-    line-height: 1.3;
-    font-weight: 400;
-    line-height: normal;
-}
-
-a .gauge-score-text-link:hover {
-    fill: #0000EE;
-    text-decoration: underline;
-}
-
-.gauge-score-average {
-    fill: #FC8900;
-    font-size: 68px;
-    font-family: Mulish;
-    font-weight: 700;
-    line-height: normal;
-    text-anchor: middle;
-}
-
-.gauge-score-title {
-    fill: #006A96;
-    font-size: 16px;
-    line-height: 26px;
-    font-family: 'Mulish';
-    font-weight: 700;
-    font-style: normal;
-}
-
+/* CSS for diversity Gauge arc */
+/* See diversity gauge function for most color styles */
 .diversity-gauge-container {
     margin-top: 1rem;
     padding-top: 1.5rem;
@@ -1705,4 +1653,48 @@ a .gauge-score-text-link:hover {
     background: var(--White, #FFF);
     box-shadow: 0px 0px 20px 2px rgba(102, 102, 102, 0.30);
     flex: 1;
+}
+
+.diversity-gauge-score-num {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 24px
+}
+
+.diversity-gauge-score-text {
+    font-size: 16px;
+    line-height: 1.3;
+    font-family: 'Mulish';
+    font-weight: 400;
+    font-style: normal;
+}
+
+.diversity-gauge-score-text-link {
+    fill: #085ee6;
+    font-family: 'Mulish';
+    font-size: 16px;
+    line-height: 1.3;
+    font-weight: 400;
+    line-height: normal;
+}
+
+a .diversity-gauge-score-text-link:hover {
+    fill: #085ee6;
+    text-decoration: underline;
+}
+
+.diversity-gauge-avg-score {
+    font-size: 54px;
+    font-family: Mulish;
+    font-weight: 700;
+    line-height: normal;
+    text-anchor: middle;
+}
+
+.diversity-gauge-title {
+    font-size: 16px;
+    line-height: 26px;
+    font-family: 'Mulish';
+    font-weight: 700;
+    font-style: normal;
 }
