--- a/microsetta_interface/templates/source.jinja2
+++ b/microsetta_interface/templates/source.jinja2
@@ -45,6 +45,40 @@
         }
         {% endif %}
 
+        let ssa_username = '';
+        let ssa_password = ''
+
+        function handleSkinAppModal(survey_link, survey_title, survey_description, app_username, app_password) {
+            $("#skin-app-modal-title").empty();
+            $("#skin-app-modal-title").text(survey_title);
+            $("#skin-app-survey-description").empty();
+            $("#skin-app-survey-description").text(survey_description);
+
+            if(app_username != '' && app_username != 'None') {
+                console.log(app_username);
+                ssa_username = app_username;
+                ssa_password = app_password;
+                document.getElementById("app-credentials-div").style.display = '';
+
+                // Once we display the credentials, the button action is to open the actual survey
+                $("#skin-app-take-survey").click(async function(e) {
+                    window.open(survey_link, '_blank').focus();
+                    $("#skin_app_modal").modal('hide');
+
+                    // We need to wait a couple of seconds for the external survey to register in the database, then reload the page. This is not ideal.
+                    await new Promise(r => setTimeout(r, 5000));
+                    window.location.reload();
+                });
+            } else {
+                document.getElementById("app-credentials-div").style.display = 'none';
+                $("#skin-app-take-survey").click(async function(e) {
+                    alert("Get credentials here!");
+                });
+            }
+            $("#skin_app_modal").modal('show');
+            return false;
+        }
+
         function hideModal() {
             $("#source_modal").modal('hide');
             return false;
@@ -123,14 +157,16 @@
         <div class="row mt-4">
         {% for detail in remote_surveys %}
             <div class="col-12 col-sm-6 col-md-4 p-2">
-            {% if detail.survey_template_id == SKIN_SCORING_APP_ID or not detail.answered %}
-                <a style="text-decoration: none" onClick="return takeExternalSurvey('/accounts/{{ account_id }}/sources/{{ source_id }}/take_survey?survey_template_id={{ detail.survey_template_id }}', '{{ detail.survey_template_title }}', '{{ detail.description }}');" href="/accounts/{{ account_id }}/sources/{{ source_id }}/take_survey?survey_template_id={{ detail.survey_template_id }}" target="_blank">
+            {% if detail.survey_template_id == SKIN_SCORING_APP_ID %}
+                <a style="text-decoration: none" onClick="return handleSkinAppModal('/accounts/{{ account_id }}/sources/{{ source_id }}/take_survey?survey_template_id={{ detail.survey_template_id }}', '{{ detail.survey_template_title }}', '{{ detail.description }}', '{{ detail.credentials['app_username'] }}', '{{ detail.credentials['app_password'] }}');" href="/accounts/{{ account_id }}/sources/{{ source_id }}/take_survey?survey_template_id={{ detail.survey_template_id }}" target="_blank">
+            {% else %}
+                {% if not detail.answered %}
+                    <a style="text-decoration: none" onClick="return takeExternalSurvey('/accounts/{{ account_id }}/sources/{{ source_id }}/take_survey?survey_template_id={{ detail.survey_template_id }}', '{{ detail.survey_template_title }}', '{{ detail.description }}');" href="/accounts/{{ account_id }}/sources/{{ source_id }}/take_survey?survey_template_id={{ detail.survey_template_id }}" target="_blank">
+                {% endif %}
             {% endif %}
                 <div class="card card-survey-external">
                     <div class="row m-2 survey-info-row">
-                        {% if detail.survey_template_id == SKIN_SCORING_APP_ID and detail.answered %}
-                            <div class="col-8 card-survey-new">{{ _('COMPLETED') }} <br> {{ _('Unique ID') }}: {{ detail.survey_id }}</div>
-                        {% elif detail.answered %}
+                        {% if detail.answered %}
                             <div class="col-8 card-survey-completed">{{ _('COMPLETED') }}</div>
                         {% else %}
                             <div class="col-8 card-survey-new">{{ _('NEW') }}</div>
@@ -176,6 +212,28 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-white-blue-border" id="cancel" onClick="hideModal();">{{ _('Maybe Later') }}</button>
                 <button type="button" class="btn btn-blue-gradient" id="take-survey">{{ _('Take This Survey Now') }}</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="skin_app_modal" tabindex="-1" role="dialog" aria-labelledby="skinAppModal" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <img src="/static/img/survey_external.svg">
+                <span class="survey-title" id="skin-app-modal-title"></span>
+            </div>
+            <div class="modal-body">
+                <p class="survey-description" id="skin-app-survey-description"></p>
+            </div>
+            <div class="modal-body" id="app-credentials-div">
+                <strong>Username: </strong><span id="app-credentials-username"></span><br />
+                <strong>Password: </strong><span id="app-credentials-password"></span>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-white-blue-border" id="skin_app_cancel" onClick="hideModal();">{{ _('Maybe Later') }}</button>
+                <button type="button" class="btn btn-blue-gradient" id="skin-app-take-survey">{{ _('Take This Survey Now') }}</button>
             </div>
         </div>
     </div>
