--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -1077,13 +1077,11 @@
 
                     $("#diversity_in_sample").text(diversityInSampleValue).removeClass("spinner-grow spinner-grow-sm");
 
-                    diversityInSampleValue = 2.5;
-
                     const diversityValues = {
                         lowestDiversityScore: 2.4,
                         highestDiversityScore: 7.25,
                         averageDiversityScore: 5.31,
-                        hadzaAverageScore: 6.30,
+                        hadzaAverageScore: 6.3,
                         diversityInSampleValue: diversityInSampleValue
                     }
 
@@ -1334,22 +1332,94 @@
         const hadzaAverageScore = diversityValues['hadzaAverageScore'];
         const diversityInSampleValue = diversityValues['diversityInSampleValue']
 
-        const margin = {top: 15, bottom: 15, left: 15, right: 15};
+        function getTextSize(text) {
+            const canvas = document.createElement('canvas');
+            const context = canvas.getContext('2d');
+            const textMetrics = context.measureText(text);
+            const elemTextWidth = textMetrics.width + textMetrics.actualBoundingBoxRight;
+            const elemTextHeight = textMetrics.fontBoundingBoxAscent + textMetrics.hangingBaseline + textMetrics.fontBoundingBoxDescent;
 
-        let imageWidth = 550;
-        let imageHeight = 350;
-        let radius = 115;
+            return {width: elemTextWidth, height: elemTextHeight};
+        }
 
-        // Set shift values to center the final diagram
-        // in order for the text labels to be balanced
-        let shiftImageX = -100;
-        let shiftImageY = 20;
+        let textSize;
+        let textWidth;
+        let textHeight;
+        let numWidth;
+        let numHeight;
 
-        const arcInnerRadius = radius * 0.57
-        const arcOuterRadius = radius * 0.82
+        // Get sample number size to adjust position
+        textSize = getTextSize(9.99);
+        numWidth = textSize.width;
+        numHeight = textSize.height;
 
-        const width = imageWidth - margin.left - margin.right;
-        const height = imageHeight - margin.top - margin.bottom;
+        // Set initial gaugeData where
+        // gauge data consists of scores, lines, score #s,
+        // descriptive text positions, and fill color.
+        // There is a flag to check if the initial descriptive
+        // text line is a link.
+        let gaugeData = [
+            {type: 'lowestDiversityScore', score: lowestDiversityScore, radiusExtension: 25, numRadialShift: 10, numColor: 'var(--tmi-blue)', numShift: [0,0], textValues: ["{{ _('Lowest in our dataset') }}"], textAnchor: 'end', lineColor: 'var(--tmi-blue-bg)', textShift: [-numWidth, 0], firstLineLink: false},
+            {type: 'highestDiversityScore', score: highestDiversityScore, radiusExtension: 25, numRadialShift: 10, numColor: "var(--tmi-blue)", numShift: [0,0], textValues: ["{{ _('Highest in our dataset') }}"], textAnchor: 'start', lineColor: 'var(--tmi-blue-bg)', textShift: [0, 0], firstLineLink: false},
+            {type: 'averageDiversityScore', score: averageDiversityScore, radiusExtension: 25, numRadialShift: 8, numColor: "var(--tmi-blue)", numShift: [0,0], textValues: ["{{ _('Average in our dataset') }}"], textAnchor: 'middle', lineColor: 'var(--tmi-blue)', textShift: [numWidth/2 + 5, -numHeight], firstLineLink: false},
+            {type: 'hadzaAverageScore', score: hadzaAverageScore, radiusExtension: 25, numRadialShift: 6, numColor: "var(--tmi-blue)", numShift: [0,6], textValues: ["{{ _('Hadza people of Tanzania') }}","{{ _('(population with a') }}","{{ _('hunter-gatherer lifestyle)') }}"], textAnchor: 'start', lineColor: 'var(--tmi-blue)', textShift: [numWidth + 5, -numHeight + 5], firstLineLink: true},
+            {type: 'diversityInSampleValue', score: diversityInSampleValue, radiusExtension: 0, numRadialShift: 6, numColor: 'var(--tmi-orange)', numShift: [0,0], textValues: [], textAnchor: 'end', lineColor: 'var(--tmi-orange)', textShift: [0, 0], firstLineLink: false}
+        ];
+
+        function getImageMeasurements() {
+            // Get text length of a score and the max text length of
+            // the Hadza people text to help determine the graphic
+            // width
+
+            const numWidth = getTextSize('9.99').width;
+
+            const hadzaAverageScoreObj = gaugeData.filter(elem => elem.type === 'hadzaAverageScore')[0];
+
+            const hadzaScoreTextWidths = hadzaAverageScoreObj.textValues.map(elem => getTextSize(elem).width);
+
+            const maxHadzaTextWidth = Math.max(...hadzaScoreTextWidths);
+
+            const radius = 115;
+            const arcInnerRadius = radius * 0.57;
+            const arcOuterRadius = radius * 0.82;
+
+            const imageHeight = 350;
+            const imageWidth = 2*numWidth + 2*arcOuterRadius + maxHadzaTextWidth + 30;
+
+            // Shift image left for the text labels to fit
+            // in the image container
+            const shiftImageX = - maxHadzaTextWidth/2 + arcOuterRadius/4;
+            const shiftImageY = 20;
+
+            const margin = {top: 15, bottom: 15, left: 20, right: 20};
+
+            const width = imageWidth - margin.left - margin.right;
+            const height = imageHeight - margin.top - margin.bottom;
+
+            const imageMeasurement = {};
+            imageMeasurement['width'] = width;
+            imageMeasurement['height'] = height;
+            imageMeasurement['radius'] = radius;
+            imageMeasurement['margin'] = margin;
+            imageMeasurement['shiftImageX'] = shiftImageX;
+            imageMeasurement['shiftImageY'] = shiftImageY;
+            imageMeasurement['arcInnerRadius'] = arcInnerRadius;
+            imageMeasurement['arcOuterRadius'] = arcOuterRadius;
+
+            return imageMeasurement;
+
+        }
+
+        const imageMeasurement = getImageMeasurements();
+
+        const width = imageMeasurement['width'];
+        const height = imageMeasurement['height'];
+        const radius = imageMeasurement['radius'];
+        const margin = imageMeasurement['margin'];
+        const shiftImageX = imageMeasurement['shiftImageX'];
+        const shiftImageY = imageMeasurement['shiftImageY'];
+        const arcInnerRadius = imageMeasurement['arcInnerRadius'];
+        const arcOuterRadius = imageMeasurement['arcOuterRadius'];
 
         // Set guage properties and add a viewBox for
         // responsive behavior
@@ -1404,161 +1474,40 @@
 
         }
 
-        let arcMinAngle = angleScale(lowestDiversityScore)
-        let arcMaxAngle = angleScale(highestDiversityScore)
+        let arcMinAngle = angleScale(lowestDiversityScore);
+        let arcMaxAngle = angleScale(highestDiversityScore);
 
-        drawArc(arcMinAngle, arcMaxAngle)
+        drawArc(arcMinAngle, arcMaxAngle);
 
-        function getTextSize(text) {
-            const canvas = document.createElement('canvas');
-            const context = canvas.getContext('2d');
-            const textMetrics = context.measureText(text);
-            const elemTextWidth = textMetrics.width + textMetrics.actualBoundingBoxRight;
-            const elemTextHeight = textMetrics.fontBoundingBoxAscent + textMetrics.hangingBaseline + textMetrics.fontBoundingBoxDescent;
-
-            return {width: elemTextWidth, height: elemTextHeight};
-        }
-
-        let textSize;
-        let textWidth;
-        let textHeight;
-        let numWidth;
-        let numHeight;
-
-        // Get sample number size to adjust position
-        textSize = getTextSize(9.99)
-        numWidth = textSize.width;
-        numHeight = textSize.height;
-
-        // Set initial gaugeData where
-        // gauge data consists of scores, lines, score #s,
-        // descriptive text positions, and fill color.
-        // There is a flag to check if the initial descriptive
-        // text line is a link.
-        let gaugeData = [
-            {type: 'lowestDiversityScore', score: lowestDiversityScore, radiusExtension: 37, numRadialShift: 10, numColor: 'var(--tmi-blue)', numShift: [0,0], textValues: ["{{ _('Lowest in our dataset') }}"], textAnchor: 'end', lineColor: 'var(--tmi-blue-bg)', textShift: [-numWidth - 5, 0], firstLineLink: false},
-            {type: 'highestDiversityScore', score: highestDiversityScore, radiusExtension: 37, numRadialShift: 10, numColor: "var(--tmi-blue)", numShift: [0,0], textValues: ["{{ _('Highest in our dataset') }}"], textAnchor: 'start', lineColor: 'var(--tmi-blue-bg)', textShift: [0, 0], firstLineLink: false},
-            {type: 'averageDiversityScore', score: averageDiversityScore, radiusExtension: 37, numRadialShift: 6, numColor: "var(--tmi-blue)", numShift: [0,0], textValues: ["{{ _('Average in our dataset') }}"], textAnchor: 'middle', lineColor: 'var(--tmi-blue)', textShift: [numWidth/2 + 5, -numHeight], firstLineLink: false},
-            {type: 'hadzaAverageScore', score: hadzaAverageScore, radiusExtension: 37, numRadialShift: 6, numColor: "var(--tmi-blue)", numShift: [0,6], textValues: ["{{ _('Hadza people of Tanzania') }}","{{ _('(population with a') }}","{{ _('hunter-gatherer lifestyle)') }}"], textAnchor: 'start', lineColor: 'var(--tmi-blue)', textShift: [numWidth/2 + 5, 0], firstLineLink: true},
-            {type: 'diversityInSampleValue', score: diversityInSampleValue, radiusExtension: 0, numRadialShift: 6, numColor: 'var(--tmi-orange)', numShift: [0,0], textValues: [], textAnchor: 'end', lineColor: 'var(--tmi-orange)', textShift: [0, 0], firstLineLink: false}
-        ]
-
-        // Adjust score positions so they don't obscure
-        // other scores and are not inside the arc
         function adjustScorePosition(gaugeData) {
             // Shift score and text position depending
             // on score value in relation to others
             // so that it's not obscured
 
-            const modifiedGuageData = [];
+            // Modify just the hadzaAverageScore properties
+            const modifiedGuageData = gaugeData.filter(elem => elem.type !== 'hadzaAverageScore');
 
-            // No changes to lowestDiversityScore position
-            const lowestDiversityScoreObj = gaugeData.filter(elem => elem.type === 'lowestDiversityScore')[0];
-            modifiedGuageData.push(lowestDiversityScoreObj);
-
-            // No changes to highestDiversityScore position
-            const highestDiversityScoreObj = gaugeData.filter(elem => elem.type === 'highestDiversityScore')[0];
-            modifiedGuageData.push(highestDiversityScoreObj);
-
-            // No changes to averageDiversityScore position
+            // hadzaAverageScore near averageDiversityScore
             const averageDiversityScoreObj = gaugeData.filter(elem => elem.type === 'averageDiversityScore')[0];
-           modifiedGuageData.push(averageDiversityScoreObj);
 
-            // hadzaAverageScore near highestDiversityScore
             const hadzaAverageScoreObj = gaugeData.filter(elem => elem.type === 'hadzaAverageScore')[0];
-            if (Math.abs(highestDiversityScoreObj.score - hadzaAverageScoreObj.score) <= 0.7){
+
+            // Shift text down for top line even with score
+            if (Math.abs(averageDiversityScoreObj.score - hadzaAverageScoreObj.score) <= 0.7){
                 textSize = getTextSize(hadzaAverageScoreObj.score.toFixed(2));
                 numWidth = textSize.width;
                 numHeight = textSize.height;
                 hadzaAverageScoreObj.textAnchor = 'start';
-                hadzaAverageScoreObj.textShift = [numWidth + 5, 0];
-            } else {
-                textSize = getTextSize(hadzaAverageScoreObj.score.toFixed(2));
-                numWidth = textSize.width;
-                numHeight = textSize.height;
-                hadzaAverageScoreObj.textAnchor = 'start';
-                hadzaAverageScoreObj.textShift = [numWidth + 5, -numHeight + 5];
+                hadzaAverageScoreObj.textShift = [numWidth + 5, numHeight/2 - 5];
             }
+
             modifiedGuageData.push(hadzaAverageScoreObj);
-
-            // compare diversityInSampleValue to
-            // diversity scores at 90, 180, and 270 degrees
-            const diversityInSampleValueObj = gaugeData.filter(elem => elem.type === 'diversityInSampleValue')[0];
-
-            const scoreScale = d3.scaleLinear()
-            .domain([startArcAngle, endArcAngle])
-            .range([lowestDiversityScore, highestDiversityScore]);
-            const quarterDiversityScore = scoreScale(90);
-            const middleDiversityScore = scoreScale(180);
-            const threeQuarterDiversityScore = scoreScale(270);
-
-            // diversityInSampleValue between low score & 90 degrees
-            if (diversityInSampleValueObj.score <  quarterDiversityScore) {
-                diversityInSampleValueObj.numRadialShift = 13;
-                diversityInSampleValueObj.numShift = [8, 5];
-                diversityInSampleValueObj.textAnchor = 'end';
-            }
-
-            // diversityInSampleValue between 90 degrees and 180 degrees
-            if (diversityInSampleValueObj.score <=  middleDiversityScore && diversityInSampleValueObj.score >=  quarterDiversityScore) {
-                diversityInSampleValueObj.numRadialShift = 13;
-                diversityInSampleValueObj.numShift = [8, 4];
-                diversityInSampleValueObj.textAnchor = 'end';
-            }
-
-            // diversityInSampleValue between 180 degrees and 270 degrees
-            if (diversityInSampleValueObj.score >  middleDiversityScore && diversityInSampleValueObj.score <=  threeQuarterDiversityScore) {
-                diversityInSampleValueObj.numRadialShift = 8;
-                diversityInSampleValueObj.numShift = [-5, 0];
-                diversityInSampleValueObj.textAnchor = 'start';
-            }
-
-            // diversityInSampleValue between 270 degrees and high score
-            if (diversityInSampleValueObj.score >  threeQuarterDiversityScore && diversityInSampleValueObj.score <=  highestDiversityScore) {
-                diversityInSampleValueObj.numRadialShift = 10;
-                diversityInSampleValueObj.numShift = [0, 5];
-                diversityInSampleValueObj.textAnchor = 'start';
-            }
-
-            // diversityInSampleValue near averageDiversityScore
-            if ((diversityInSampleValueObj.score - averageDiversityScoreObj.score) <= 0 &&
-            diversityInSampleValueObj.score - averageDiversityScoreObj.score >= -0.25) {
-                diversityInSampleValueObj.textAnchor = 'end';
-                diversityInSampleValueObj.numRadialShift=9;
-                diversityInSampleValueObj.numShift = [4, -5];
-            }
-
-            if ((diversityInSampleValueObj.score - averageDiversityScoreObj.score) >= 0 &&
-            diversityInSampleValueObj.score - averageDiversityScoreObj.score <= 0.25) {
-                diversityInSampleValueObj.textAnchor = 'start';
-                diversityInSampleValueObj.numRadialShift=8;
-                diversityInSampleValueObj.numShift = [4, 5];
-            }
-
-            // diversityInSampleValue near hadzaAverageScore
-            if ((diversityInSampleValueObj.score - hadzaAverageScoreObj.score) >= 0) {
-                diversityInSampleValueObj.textAnchor = 'start';
-                diversityInSampleValueObj.numRadialShift = 9;
-            }
-
-            if (hadzaAverageScoreObj.score - diversityInSampleValueObj.score <= 0.05 && hadzaAverageScoreObj.score - diversityInSampleValueObj.score >= 0) {
-                diversityInSampleValueObj.numShift = [-5, -5];
-                diversityInSampleValueObj.textAnchor = 'start';
-                diversityInSampleValueObj.numRadialShift = 9;
-            }
-
-            if (diversityInSampleValueObj.score - hadzaAverageScoreObj.score >= 0 &&
-            diversityInSampleValueObj.score - hadzaAverageScoreObj.score <= 0.2) {
-                diversityInSampleValueObj.numShift = [-5, 12];
-                diversityInSampleValueObj.textAnchor = 'start';
-                diversityInSampleValueObj.numRadialShift = 9;
-            }
-
-            modifiedGuageData.push(diversityInSampleValueObj);
 
           return modifiedGuageData;
         }
 
+        // Adjust score positions so they don't obscure
+        // other scores and are not inside the arc
         gaugeData = adjustScorePosition(gaugeData);
 
         function drawRadialLine(svg, startRadius, endRadius, angleDeg, color, width) {
@@ -1582,6 +1531,7 @@
 
         // Draw the score lines, numbers, and descriptive text
         function drawScoreAndText(data) {
+            const type = data.type;
             const score = data.score;
             const radiusExtension = data.radiusExtension;
             const numRadialShift = data.numRadialShift;
@@ -1593,27 +1543,30 @@
             const textShift = data.textShift;
             const firstLineLink = data.firstLineLink;
 
-            const diversityAngle = angleScale(score)
+            const diversityAngle = angleScale(score);
             const diversityAngleRad = (diversityAngle * Math.PI) / 180;
 
             const lineRadius = arcOuterRadius + radiusExtension;
 
-            drawRadialLine(svg, arcInnerRadius, lineRadius, diversityAngle, lineColor, 2)
+            drawRadialLine(svg, arcInnerRadius, lineRadius, diversityAngle, lineColor, 2);
 
             const lineRadiusShifted = lineRadius + numRadialShift;
 
             let xScoreRadius = - lineRadiusShifted * Math.sin(diversityAngleRad);
             let yScoreRadius = lineRadiusShifted * Math.cos(diversityAngleRad);
 
-            svg.append('text')
-                .attr('x', xScoreRadius)
-                .attr('y', yScoreRadius)
-                .attr('dx', numShift[0])
-                .attr('dy', numShift[1])
-                .attr("text-anchor", textAnchor)
-                .attr("class", "diversity-gauge-score-num")
-                .style("fill", numColor)
-                .text(score.toFixed(2));
+            // Show score if not the sample diversity value
+            if (type !== 'diversityInSampleValue') {
+                svg.append('text')
+                    .attr('x', xScoreRadius)
+                    .attr('y', yScoreRadius)
+                    .attr('dx', numShift[0])
+                    .attr('dy', numShift[1])
+                    .attr("text-anchor", textAnchor)
+                    .attr("class", "diversity-gauge-score-num")
+                    .style("fill", numColor)
+                    .text(score.toFixed(2));
+            }
 
             if (firstLineLink === true) {
                 svg.append('a')
@@ -1651,7 +1604,7 @@
         }
 
         gaugeData.forEach(data => {
-            drawScoreAndText(data)
+            drawScoreAndText(data);
         })
 
         // Add static text to the gauge image
