Normalized date blank

--- a/microsetta_interface/templates/sample.jinja2
+++ b/microsetta_interface/templates/sample.jinja2
@@ -38,6 +38,7 @@
             if (sample_site != "Cheek") {
                 display_state = "none";
                 $("#sample_site_last_washed_date").val("");
+                $("#sample_site_last_washed_date_normalized").val("");
                 $("#sample_site_last_washed_time").val("");
                 $("#sample_site_last_washed_product").val("").change();
             }
