--- a/microsetta_interface/templates/source.jinja2
+++ b/microsetta_interface/templates/source.jinja2
@@ -46,9 +46,9 @@
         {% endif %}
 
         let skin_app_username = '';
-        let skin_app_password = '';
+        let skin_app_studycode = '';
 
-        function handleSkinAppModal(survey_link, survey_title, survey_description, app_username, app_password) {
+        function handleSkinAppModal(survey_link, survey_title, survey_description, app_username, app_studycode) {
             $("#skin-app-modal-title").empty();
             $("#skin-app-modal-title").text(survey_title);
             $("#skin-app-survey-description").empty();
@@ -58,7 +58,7 @@
             // However, there's no situation where we'd retract the credentials, so we don't need to do anything with blank values.
             if(app_username != '' && app_username != 'None') {
                 skin_app_username = app_username
-                skin_app_password = app_password
+                skin_app_studycode = app_studycode
             }
 
             if(skin_app_username != '') {
@@ -66,14 +66,14 @@
 
                 document.getElementById("app-credentials-div").style.display = '';
                 document.getElementById("app-credentials-username").innerHTML = skin_app_username;
-                document.getElementById("app-credentials-password").innerHTML = skin_app_password;
+                document.getElementById("app-credentials-studycode").innerHTML = skin_app_studycode;
 
                 // Once we display the credentials, the button action is to open the actual survey
                 $("#skin-app-take-survey").click(function(e) {
                     window.open(survey_link, '_blank').focus();
                 });
             } else {
-                $("#skin-app-take-survey").html('{{ _('Get Username and Password') }}');
+                $("#skin-app-take-survey").html('{{ _('Get Username and Study Code') }}');
 
                 document.getElementById("app-credentials-div").style.display = 'none';
                 $("#skin-app-take-survey").click(async function(e) {
@@ -87,13 +87,13 @@
                                 document.getElementById("app-error").style.display = '';
                             } else {
                                 let s_user = data['app_username'];
-                                let s_pass = data['app_password'];
+                                let s_sc = data['app_studycode'];
                                 if (s_user.length < 1) {
                                     // We weren't able to allocate them credentials.
                                     document.getElementById("app-error").style.display = '';
                                 } else {
                                     // We got credentials, refresh this modal
-                                    handleSkinAppModal(survey_link, survey_title, survey_description, s_user, s_pass);
+                                    handleSkinAppModal(survey_link, survey_title, survey_description, s_user, s_sc);
                                 }
                             }
                         }
@@ -188,7 +188,7 @@
         {% for detail in remote_surveys %}
             <div class="col-12 col-sm-6 col-md-4 p-2">
             {% if detail.survey_template_id == SKIN_SCORING_APP_ID %}
-                <a style="text-decoration: none" onClick="return handleSkinAppModal('/accounts/{{ account_id }}/sources/{{ source_id }}/take_survey?survey_template_id={{ detail.survey_template_id }}', '{{ detail.survey_template_title }}', '{{ detail.description }}', '{{ detail.credentials['app_username'] }}', '{{ detail.credentials['app_password'] }}');" href="/accounts/{{ account_id }}/sources/{{ source_id }}/take_survey?survey_template_id={{ detail.survey_template_id }}" target="_blank">
+                <a style="text-decoration: none" onClick="return handleSkinAppModal('/accounts/{{ account_id }}/sources/{{ source_id }}/take_survey?survey_template_id={{ detail.survey_template_id }}', '{{ detail.survey_template_title }}', '{{ detail.description }}', '{{ detail.credentials['app_username'] }}', '{{ detail.credentials['app_studycode'] }}');" href="/accounts/{{ account_id }}/sources/{{ source_id }}/take_survey?survey_template_id={{ detail.survey_template_id }}" target="_blank">
             {% else %}
                 {% if not detail.answered %}
                     <a style="text-decoration: none" onClick="return takeExternalSurvey('/accounts/{{ account_id }}/sources/{{ source_id }}/take_survey?survey_template_id={{ detail.survey_template_id }}', '{{ detail.survey_template_title }}', '{{ detail.description }}');" href="/accounts/{{ account_id }}/sources/{{ source_id }}/take_survey?survey_template_id={{ detail.survey_template_id }}" target="_blank">
@@ -261,12 +261,12 @@
             <div class="modal-body" id="app-credentials-div">
                 <p class="survey-description">
                     <strong>Username: </strong><span id="app-credentials-username"></span><br />
-                    <strong>Password: </strong><span id="app-credentials-password"></span>
+                    <strong>Study Code: </strong><span id="app-credentials-studycode"></span>
                 </p>
             </div>
             <div class="modal-body" id="app-error" style="display: none">
                 <p class="survey-description">
-                    {{ _('Sorry, there was a problem generating a username and password. Please try again later.') }}
+                    {{ _('Sorry, there was a problem generating a username and study code. Please try again later.') }}
                 </p>
             </div>
             <div class="modal-footer">
