--- a/microsetta_interface/static/css/minimal_interface.css
+++ b/microsetta_interface/static/css/minimal_interface.css
@@ -1690,7 +1690,7 @@ input.barcode-checkbox[type=checkbox]:checked+label {
     right: 20px;
     display: flex;
     align-items: center;
-    gap: 10px; 
+    gap: 10px;
 }
 
 .info-circle {
@@ -1738,8 +1738,40 @@ input.barcode-checkbox[type=checkbox]:checked+label {
     margin-bottom: 20px;
 }
 
-#tooltip {
+#composition-boxplots-tooltip {
     pointer-events: none;
     z-index: 1000;
 }
 
+/* for composition box plots */
+#composition-boxplots-display-container {
+    margin-top: 1rem;
+    padding-top: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+#composition-boxplots-display {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.composition-boxplot-image {
+    max-width: 50%;
+}
+
+#boxplot-info-outer {
+    position: relative;
+    margin-bottom: 4rem;
+}
+
+@media (max-width: 767.98px) {
+    #composition-boxplots-display {
+        flex-wrap: nowrap;
+        flex-direction: column;
+    }
+
+    .composition-boxplot-image {
+        max-width: 100%;
+    }
+}
