--- a/microsetta_interface/templates/kits.jinja2
+++ b/microsetta_interface/templates/kits.jinja2
@@ -203,6 +203,11 @@
             {{ _('Thank you for logging your sample information. It looks like you haven\'t updated your profile recently. Please review') }} <a href="/accounts/{{account_id}}/sources/{{source_id}}/take_survey?survey_template_id={{prompt_survey_id}}">{{ _('your survey responses') }}</a> {{ _('to ensure they\'re as current and complete as possible.') }}
         </div>
         {% endif %}
+        {% if prompt_skin_app %}
+        <div class="alert alert-primary alert-nutrition mt-4" role="alert">
+            {{ _('You now have access to the Skin Scoring App survey. Please return to the') }} <a href="/accounts/{{account_id}}/sources/{{source_id}}/take_survey?survey_template_id={{prompt_survey_id}}">{{ _('My Profile tab') }}</a> {{ _('to complete it.') }}
+        </div>
+        {% endif %}
         {% if profile_has_samples and (need_reconsent_data or need_reconsent_biospecimen) %}
             <div id="consent_alert" class="alert alert-consent mt-4" role="alert">
                 {{ _('To update your existing samples or contribute new samples, please review the following:') }}<br />
