--- a/microsetta_interface/templates/source.jinja2
+++ b/microsetta_interface/templates/source.jinja2
@@ -260,8 +260,8 @@
             </div>
             <div class="modal-body" id="app-credentials-div">
                 <p class="survey-description">
-                    <strong>Username: </strong><span id="app-credentials-username"></span><br />
-                    <strong>Study Code: </strong><span id="app-credentials-studycode"></span>
+                    <strong>{{ _('Username (enter into the "Email" field)') }}: </strong><span id="app-credentials-username"></span><br />
+                    <strong>{{ _('Study Code (enter into the "Password" field)') }}: </strong><span id="app-credentials-studycode"></span>
                 </p>
             </div>
             <div class="modal-body" id="app-error" style="display: none">
