--- a/microsetta_interface/templates/kits.jinja2
+++ b/microsetta_interface/templates/kits.jinja2
@@ -205,7 +205,7 @@
         {% endif %}
         {% if prompt_skin_app %}
         <div class="alert alert-primary alert-kits mt-4" role="alert">
-            {{ _('You now have access to the Skin Scoring App survey. Please return to the') }} <a href="/accounts/{{account_id}}/sources/{{source_id}}/take_survey?survey_template_id={{prompt_survey_id}}">{{ _('My Profile tab') }}</a> {{ _('to complete it.') }}
+            {{ _('You now have access to the Skin Scoring App survey. Please return to the') }} <a href="/accounts/{{account_id}}/sources/{{source_id}}">{{ _('My Profile tab') }}</a> {{ _('to complete it.') }}
         </div>
         {% endif %}
         {% if profile_has_samples and (need_reconsent_data or need_reconsent_biospecimen) %}
